# seer-agent

./: README.md  __init__.py  gates.py  heuristics.py  plugin.yaml  pyproject.toml  router.py  routing_rules.json  runtime_utils.py  seer_persona.md  storage.py
core/: operations.py  state.py
handlers/: __init__.py  commands.py  hooks.py
personas/: feature_developer.md  principal_engineer.md  project_manager.md
register/: __init__.py
register/tools/: is_codebase_available.py
registry/: __init__.py  tools.py
src/seer_agent/: __init__.py  codebases.json  codebases.py  home.py  paths.py  recommended.json  recommended.py  router.py  routing_rules.json  runtime_utils.py  seer_persona.md  types.py
src/seer_agent/core/: __init__.py  codebase_store.py
src/seer_agent/handlers/: command_engine.py  commands.py  hooks.py  policy_engine.py
src/seer_agent/personas/: feature_developer.md  principal_engineer.md
src/seer_agent/register/: __init__.py
src/seer_agent/register/skills/: __init__.py
src/seer_agent/register/skills/seer_agent_tools/: SKILL.md  __init__.py
src/seer_agent/register/tools/: __init__.py  get_available_codebases.py  get_recommended_tools.py  is_codebase_available.py  trace_with_seer.py
tests/: conftest.py  test_codebase_store.py  test_codebases.py  test_home.py  test_paths.py  test_recommended.py  test_register_skills.py  test_trace_with_seer.py
typings/: hermes_constants.pyi
