[project]
name = "seer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "__init__.py"]
exclude = [".venv", ".pytest_cache"]
extraPaths = ["src"]
stubPath = "typings"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
